Localize error messages in `Receipt.razor` using `Localizer`.

--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
@@ -296,7 +296,7 @@
         await result.MatchAsync(error =>
         {
             _grid.CancelEditRow(purchase);
-            return _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => e.Message)));
+            return _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Message])));
         }, purchaseId =>
         {
             purchase.Id = purchaseId;
