Add localized empty state message for receipts table in `Receipts.razor`.

--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
@@ -21,6 +21,7 @@
     ShowPagingSummary="true"
     PageSizeOptions="[10, 20]"
     PageSizeText="@Localizer["Items per page"]"
+    EmptyText="@Localizer["No receipts to display"]"
     AllowFiltering="true"
     FilterMode="FilterMode.Simple"
     AllowSorting="true"
