Replace localized error messages with localized error codes in `Receipt` pages.

--- a/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
@@ -50,7 +50,7 @@
         Result<Guid> result = await ReceiptService.CreateReceiptAsync(_store, _purchaseDate);
         await result
             .MatchAsync(
-                error => _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Message]))),
+                error => _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Code]))),
                 id => Task.FromResult(NavigateTo($"/receipts/{id}")));
     }
 
