--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
@@ -200,7 +200,7 @@
             {
                 _store = _receipt.Store;
                 _purchaseDate = _receipt.PurchaseDate;
-                return await _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Message])));
+                return await _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Code])));
             },
             unit =>
             {
@@ -273,7 +273,7 @@
             await result.MatchAsync(
                 async error =>
                 {
-                    await _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Message])));
+                    await _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Code])));
                     await _grid.EditRow(purchase);
                     return Unit.Instance;
                 },
@@ -289,7 +289,7 @@
             await result.MatchAsync(
                 async error =>
                 {
-                    await _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Message])));
+                    await _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Code])));
                     await _grid.EditRow(purchase);
                     return Unit.Instance;
                 },
@@ -327,7 +327,7 @@
 
         Result<Unit> result = await ReceiptService.DeletePurchaseAsync(ReceiptId, purchase.Id);
         await result.MatchAsync(
-            error => _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Message]))),
+            error => _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Code]))),
             unit =>
             {
                 _purchases = _purchases.Where(p => p.Id != purchase.Id);
