Add `Reports` menu item and localization

--- a/src/ExpenseExplorer.WebApp/Components/Layout/NavMenu.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Layout/NavMenu.razor
@@ -3,4 +3,5 @@
 <RadzenPanelMenu>
     <RadzenPanelMenuItem Path="" Match="NavLinkMatch.All" Text="@Localizer["Receipts"]" Icon="home" />
     <RadzenPanelMenuItem Path="/receipt-items" Text="@Localizer["Receipt items"]" Icon="home" />
+    <RadzenPanelMenuItem Path="/reports" Text="@Localizer["Reports"]" Icon="assessment" />
 </RadzenPanelMenu>
