Simplify `_categoryExpenses.Any()` condition in `Reports.razor`.

--- a/src/ExpenseExplorer.WebApp/Components/Pages/Reports.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Reports.razor
@@ -14,7 +14,7 @@
     <RadzenDatePicker TValue="DateOnly?" @bind-Value="_dateTo" Change="DataChanged"/>
 </RadzenStack>
 
-@if (_categoryExpenses.Any() == false)
+@if (!_categoryExpenses.Any())
 {
     <p>@Localizer["No data to display"]</p>
 }
