Include `app.js` script in `App.razor`.

--- a/src/ExpenseExplorer.WebApp/Components/App.razor
+++ b/src/ExpenseExplorer.WebApp/Components/App.razor
@@ -18,6 +18,7 @@
 <Routes @rendermode="InteractiveServer"/>
 <script src="_framework/blazor.web.js"></script>
 <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
+<script src="app.js"></script>
 </body>
 
 </html>
