Update icons for "Receipts" and "Receipt items" menu items

--- a/src/ExpenseExplorer.WebApp/Components/Layout/NavMenu.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Layout/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿@inject IStringLocalizer<NavMenu> Localizer
 
 <RadzenPanelMenu>
-    <RadzenPanelMenuItem Path="" Match="NavLinkMatch.All" Text="@Localizer["Receipts"]" Icon="home" />
-    <RadzenPanelMenuItem Path="/receipt-items" Text="@Localizer["Receipt items"]" Icon="home" />
+    <RadzenPanelMenuItem Path="" Match="NavLinkMatch.All" Text="@Localizer["Receipts"]" Icon="receipt_long" />
+    <RadzenPanelMenuItem Path="/receipt-items" Text="@Localizer["Receipt items"]" Icon="grocery" />
     <RadzenPanelMenuItem Path="/reports" Text="@Localizer["Reports"]" Icon="assessment" />
 </RadzenPanelMenu>
