Make `Receipts` and `Receipt items` grids responsive

--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
@@ -35,7 +35,8 @@
     AllowSorting="true"
     EditMode="DataGridEditMode.Single"
     EmptyText="@Localizer["No receipt items to display"]"
-    RowUpdate="@OnUpdateRow">
+    RowUpdate="@OnUpdateRow"
+    Responsive="true">
     <Columns>
         <RadzenDataGridColumn Property="@nameof(PurchaseDetails.ItemName)" Title="@Localizer["Item name"]">
             <EditTemplate Context="purchase">
