--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
@@ -41,13 +41,13 @@
         <RadzenDataGridColumn Property="@nameof(PurchaseDetails.ItemName)" Title="@Localizer["Item name"]">
             <EditTemplate Context="purchase">
                 <RadzenAutoComplete @bind-Value="@purchase.ItemName" Data="_items" OpenOnFocus="true"
-                                    LoadData="OnItemsLoadData"/>
+                                    LoadData="OnItemsLoadData" class="w-100"/>
             </EditTemplate>
         </RadzenDataGridColumn>
         <RadzenDataGridColumn Property="@nameof(PurchaseDetails.Category)" Title="@Localizer["Category"]">
             <EditTemplate Context="purchase">
                 <RadzenAutoComplete @bind-Value="@purchase.Category" Data="_categories" OpenOnFocus="true"
-                                    LoadData="OnCategoriesLoadData"/>
+                                    LoadData="OnCategoriesLoadData" class="w-100"/>
             </EditTemplate>
         </RadzenDataGridColumn>
         <RadzenDataGridColumn Property="@nameof(PurchaseDetails.Quantity)" Title="@Localizer["Quantity"]">
@@ -57,7 +57,7 @@
                     : string.Format(new CultureInfo("pl-PL"), "{0:F3}", context.Quantity))
             </Template>
             <EditTemplate>
-                <RadzenNumeric ConvertValue="ConvertDecimal" @bind-Value="@context.Quantity" ShowUpDown="false"/>
+                <RadzenNumeric ConvertValue="ConvertDecimal" @bind-Value="@context.Quantity" ShowUpDown="false" class="w-100"/>
             </EditTemplate>
         </RadzenDataGridColumn>
         <RadzenDataGridColumn Property="@nameof(PurchaseDetails.UnitPrice)" Title="@Localizer["Unit price"]">
@@ -65,7 +65,7 @@
                 @string.Format(new CultureInfo("pl-PL"), "{0:C}", context.UnitPrice)
             </Template>
             <EditTemplate>
-                <RadzenNumeric ConvertValue="ConvertDecimal" @bind-Value="@context.UnitPrice" ShowUpDown="false"/>
+                <RadzenNumeric ConvertValue="ConvertDecimal" @bind-Value="@context.UnitPrice" ShowUpDown="false" class="w-100"/>
             </EditTemplate>
         </RadzenDataGridColumn>
         <RadzenDataGridColumn Property="@nameof(PurchaseDetails.PriceBeforeDiscount)"
@@ -79,7 +79,7 @@
                 @string.Format(new CultureInfo("pl-PL"), "{0:C}", context.Discount)
             </Template>
             <EditTemplate>
-                <RadzenNumeric ConvertValue="ConvertOptionalDecimal" @bind-Value="@context.Discount" ShowUpDown="false"/>
+                <RadzenNumeric ConvertValue="ConvertOptionalDecimal" @bind-Value="@context.Discount" ShowUpDown="false" class="w-100"/>
             </EditTemplate>
         </RadzenDataGridColumn>
         <RadzenDataGridColumn Property="@nameof(PurchaseDetails.PriceAfterDiscount)"
@@ -90,7 +90,7 @@
         </RadzenDataGridColumn>
         <RadzenDataGridColumn Property="@nameof(PurchaseDetails.Description)" Title="@Localizer["Description"]">
             <EditTemplate>
-                <RadzenTextArea @bind-Value="@context.Description"/>
+                <RadzenTextArea @bind-Value="@context.Description" class="w-100"/>
             </EditTemplate>
         </RadzenDataGridColumn>
         <RadzenDataGridColumn Property="@nameof(PurchaseDetails.Id)" Filterable="false" Sortable="false" Width="150px"
