--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
@@ -13,16 +13,51 @@
 <PageTitle>@Localizer["_Title"]</PageTitle>
 
 <RadzenCard Variant="Variant.Outlined" class="rz-my-2 rz-mx-auto">
-    <RadzenRow JustifyContent="JustifyContent.Center">
-        <RadzenFormField Text="@Localizer["Store"]">
-            <RadzenAutoComplete @bind-Value="@_store" Data="_stores" OpenOnFocus="true" LoadData="OnStoresLoadData" @onfocusout="@SaveReceipt"/>
-        </RadzenFormField>
-        <RadzenFormField Text="@Localizer["Purchase date"]">
-            <RadzenDatePicker @bind-Value="@_purchaseDate" @onfocusout="@SaveReceipt"/>
-        </RadzenFormField>
-        <RadzenFormField Text="@Localizer["Total cost"]">
-            <RadzenTextBox Disabled="true" Value="@TotalCost.ToString("C2", new CultureInfo("pl-PL"))"/>
-        </RadzenFormField>
+    <RadzenRow class="w-100">
+        <RadzenColumn Offset="0" OffsetLG="2" Size="12" SizeLG="8">
+            <RadzenRow JustifyContent="JustifyContent.Center">
+                <RadzenFormField Text="@Localizer["Store"]">
+                    <RadzenAutoComplete
+                        @bind-Value="@_store"
+                        Data="_stores"
+                        OpenOnFocus="true"
+                        LoadData="OnStoresLoadData"
+                        @onfocusout="@SaveReceipt"/>
+                </RadzenFormField>
+                <RadzenFormField Text="@Localizer["Purchase date"]">
+                    <RadzenDatePicker
+                        @bind-Value="@_purchaseDate"
+                        @onfocusout="@SaveReceipt"/>
+                </RadzenFormField>
+                <RadzenFormField Text="@Localizer["Total cost"]">
+                    <RadzenTextBox
+                        Disabled="true"
+                        Value="@TotalCost.ToString("C2", new CultureInfo("pl-PL"))"/>
+                </RadzenFormField>
+            </RadzenRow>
+        </RadzenColumn>
+        <RadzenColumn Size="12" SizeLG="2">
+            <RadzenStack Orientation="Orientation.Vertical" Gap="0.5rem" AlignItems="AlignItems.Center">
+                <RadzenButton
+                    Icon="add"
+                    Size="ButtonSize.Small"
+                    Variant="Variant.Flat"
+                    Shade="Shade.Lighter"
+                    ButtonStyle="ButtonStyle.Success"
+                    Text="@Localizer["Add item"]"
+                    Click="@InsertRow"
+                    class="w-100"/>
+                <RadzenButton
+                    Icon="download"
+                    Size="ButtonSize.Small"
+                    Variant="Variant.Flat"
+                    Shade="Shade.Lighter"
+                    ButtonStyle="ButtonStyle.Primary"
+                    Text="@Localizer["Export"]"
+                    Click="@ExportReceipt"
+                    class="w-100"/>
+            </RadzenStack>
+        </RadzenColumn>
     </RadzenRow>
 </RadzenCard>
 
@@ -95,14 +130,6 @@
         </RadzenDataGridColumn>
         <RadzenDataGridColumn Property="@nameof(PurchaseDetails.Id)" Filterable="false" Sortable="false" Width="150px"
                               TextAlign="TextAlign.Center">
-            <HeaderTemplate>
-                <RadzenStack Orientation="Orientation.Vertical" Gap="0.5rem" JustifyContent="JustifyContent.Center">
-                    <RadzenButton Icon="add" Size="ButtonSize.Small" Variant="Variant.Flat" Shade="Shade.Lighter"
-                                  ButtonStyle="ButtonStyle.Success" Text="@Localizer["Add item"]" Click="@InsertRow"/>
-                    <RadzenButton Icon="download" Size="ButtonSize.Small" Variant="Variant.Flat" Shade="Shade.Lighter"
-                                  ButtonStyle="ButtonStyle.Primary" Text="@Localizer["Export"]" Click="@ExportReceipt"/>
-                </RadzenStack>
-            </HeaderTemplate>
             <Template Context="purchase">
                 <RadzenButton Icon="edit" Size="ButtonSize.Small" Variant="Variant.Flat" Shade="Shade.Lighter"
                               ButtonStyle="ButtonStyle.Light" Click="@(_ => EditRow(purchase))"/>
